--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title> Martin Skaanes - Personal Website</title>
   </head>
   <body>
-    <div id="navbar_top"></div>
+    <div id="navbar_top"></a></div>
   </body>
 </html>
