Added a test block

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <title> Martin Skaanes - Personal Website</title>
   </head>
   <body>
-    <div id="navbar_top"></a></div>
+    <div id="navbar_top" class="topnav">
+      <a class="navbar_block">Home</a>
+    </div>
   </body>
 </html>
