--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
     <div id="navbar_top" class="topnav">
       <a class="navbar_block">Home</a>
+      <a class="navbar_block">Test 1</a>
     </div>
   </body>
 </html>
