Working on Fixing Issues

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title> Martin Skaanes - Personal Website</title>
   </head>
   <body>
-    <div id="navbar_top" class="topnav">
+    <div class="topnav">
       <a class="navbar_block">Home</a>
       <a class="navbar_block">Test 1</a>
     </div>
