Removed navbar_block class

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   </head>
   <body>
     <div class="topnav">
-      <a class="navbar_block">Home</a>
-      <a class="navbar_block">Test 1</a>
+      <a>Home</a>
+      <a>Test 1</a>
     </div>
   </body>
 </html>
