--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title> Martin Skaanes - Personal Website</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="topnav">
