Gave main class to the home button

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="topnav">
-      <a>Home</a>
+      <a class="Main">Home</a>
       <a>Test 1</a>
     </div>
   </body>
