Added Useful Buttons

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <body>
     <div class="topnav">
       <a class="Main">Home</a>
-      <a>Test 1</a>
+      <a>My Experience</a>
+      <a>Projects</a>
+      <a>About Me</a>
     </div>
   </body>
 </html>
