Added bold around the Home button

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="topnav">
-      <a class="Main">Home</a>
+      <a class="Main"><b>Home</b></a>
       <a>My Experience</a>
       <a>Projects</a>
       <a>About Me</a>
