Added Projects.html and added working hyperlinks

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <div class="topnav">
-      <a class="Main"><b>Home</b></a>
+      <a class="Main" href="/index.html"><b>Home</b></a>
       <a>My Experience</a>
-      <a>Projects</a>
+      <a href="/subPages/Projects.html">Projects</a>
       <a>About Me</a>
     </div>
   </body>
