--- a/subPages/Projects.html
+++ b/subPages/Projects.html
@@ -10,6 +10,6 @@
             <a href="/subPages/Projects.html">Projects</a>
             <a>About Me</a>
         </div>
-        <h1><center> My Projects </center></h1>
+        <h1 style="margin-top: 60px"><center> My Projects </center></h1>
     </body>
 </html>
