--- a/subPages/Projects.html
+++ b/subPages/Projects.html
@@ -5,9 +5,9 @@
     </head>
     <body>
         <div class="topnav">
-            <a class="Main" href="/index.html"><b>Home</b></a>
+            <a href="/index.html"><b>Home</b></a>
             <a>My Experience</a>
-            <a href="/subPages/Projects.html">Projects</a>
+            <a href="/subPages/Projects.html" class="Main">Projects</a>
             <a>About Me</a>
         </div>
         <h1><center> My Projects </center></h1>
