Removed HTML ending in links

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   </head>
   <body>
     <div class="topnav">
-      <a class="Main" href="/index.html"><b>Home</b></a>
+      <a class="Main" href="https://spacestudios.github.io/"><b>Home</b></a>
       <a>My Experience</a>
-      <a href="/subPages/Projects.html">Projects</a>
+      <a href="https://spacestudios.github.io/subPages/Projects">Projects</a>
       <a>About Me</a>
     </div>
   </body>
